# vors

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/audio/: Cargo.toml  build.rs
src/audio/src/: lib.rs  settings.rs
src/build_filesystem/: Cargo.toml
src/build_launcher/: Cargo.toml
src/build_xtask/: Cargo.toml  README.md
src/build_xtask/src/: build.rs  dependencies.rs  main.rs  packaging.rs  version.rs
src/client/: Cargo.toml
src/client/src/: api.rs
src/client_audio/: Cargo.toml
src/client_audio/src/: lib.rs
src/client_data/: Cargo.toml
src/client_edge/: Cargo.toml
src/client_edge/src/: api.rs  lib.rs  web_server.rs
src/client_front/: Cargo.toml
src/commands/: Cargo.toml
src/common/: Cargo.toml
src/common/src/: lib.rs  logging.rs  version.rs
src/filesystem/: Cargo.toml  build.rs
src/filesystem/src/: lib.rs
src/launcher/: Cargo.toml
src/server/: Cargo.toml
src/server/src/: api.rs
src/server_core/: Cargo.toml
src/server_data/: Cargo.toml
src/server_front/: Cargo.toml
src/share_common/: Cargo.toml
src/share_common/src/: lib.rs  logging.rs  version.rs
src/share_packets/: Cargo.toml
src/share_session/: Cargo.toml
src/share_session/src/: lib.rs  settings.rs
src/share_sockets/: Cargo.toml
src/share_sockets/src/: control_socket.rs  lib.rs
src/share_sockets/src/stream_socket/: mod.rs  tcp.rs  udp.rs
src/sockets/: Cargo.toml
src/xtask/src/: build.rs  command.rs  dependencies.rs  main.rs  packaging.rs  version.rs
