[workspace]
resolver = "2"
members = ["src/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
authors = ["vors-org"]
license = "MIT"

[workspace.dependencies]
vors_audio = { path = "src/audio" }
vors_client = { path = "src/client" }
vors_commands = { path = "src/commands" }
vors_common = { path = "src/common" }
vors_filesystem = { path = "src/filesystem" }
vors_launcher = { path = "src/launcher" }
vors_server = { path = "src/server" }
vors_sockets = { path = "src/sockets" }

[profile.distribution]
inherits = "release"
lto = true
