[workspace]
resolver = "2"
members = ["src/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
authors = ["vors-org"]
license = "MIT"

[workspace.dependencies]
vors_common = { path = "src/share_common" }
vors_session = { path = "src/share_session" }
vors_sockets = { path = "src/share_sockets" }
vors_packets = { path = "src/share_packets" }

vors_audio = { path = "src/client_audio" }
vors_client = { path = "src/client" }

vors_filesystem = { path = "src/build_filesystem" }
vors_launcher = { path = "src/build_launcher" }
vors_server = { path = "src/build_server" }

[profile.distribution]
inherits = "release"
lto = true
