[package]
name = "vors_audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vors_common.workspace = true

cpal = "^0.15"
rodio = "^0.17"

bytemuck = { version = "1", features = ["derive"] }
serde = "1.0"
serde_json = "1"
settings-schema = "^0.2.0"

[build-dependencies]
regex = "1"

[target.'cfg(windows)'.dependencies]
widestring = "1"
windows = { version = "0.44", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
] }
