[package]
name = "vors_client_audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vors_share_common.workspace = true
vors_share_session.workspace = true
vors_share_sockets.workspace = true

cpal = { version = "0.15", features = ["jack"] }
rodio = "0.17"
serde = "1"
tokio = "1"

[target.'cfg(windows)'.dependencies]
widestring = "1"
windows = { version = "0.48", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
] }
