[package]
name = "vors_client_edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vors_share_common.workspace = true
vors_share_session.workspace = true
vors_share_sockets.workspace = true
vors_share_packets.workspace = true

vors_build_filesystem.workspace = true

vors_client_audio.workspace = true

# Serialization
bincode = "1"
serde = "1"
serde_json = "1"
# Networking and async
bytes = "1"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = [
    "http2",
    "server",
    "stream",
    "runtime",
    "tcp",
] }
reqwest = "0.11"
rosc = "0.10"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
tokio-tungstenite = "0.19"
tokio-util = { version = "0.7", features = ["codec"] }
# Miscellaneous
chrono = "0.4"
fern = "0.6"
spin_sleep = "1"
sysinfo = { version = "0.29", default-features = false }
