[package]
name = "vors_packets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vors_common.workspace = true
vors_session.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
