[package]
name = "vors_share_sockets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vors_share_common.workspace = true
vors_share_session.workspace = true

bincode = "1"
bytes = "1"
futures = "0.3"
serde = "1"
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["rt", "net", "macros"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
